client/src/App.css
@import url('https://fonts.googleapis.com/css?family=Unica+One');


.landing {
  background-image:url("./assets/img/4.jpg"), linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7));
  background-blend-mode: overlay;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  min-height: 100%;
  width: 100%;
  height: 100%;
}

html { 
  width: 100%;
  height: 100%;
}

#root, #root>div {
  width: 100%;
  height: 100%;
}

body {
  width: 100%;
  height: 100%;
}

.page {
  height:100%;
  width: 100%;
  color: white;
  background-color: black;
  font-family: 'Unica One', cursive;
  font-weight: 600;
  min-height: 100%;
  position: absolute;
}

.text {
  color: white;
  font-family: 'Open Sans', sans-serif;
}


.flex-container {
  display: flex; /* or inline-flex */
  /* border: 1px solid white; */
  flex-direction: row-reverse;
  height: 100%;
  width: 100%;
  margin: auto;
  align-items: center;
  justify-content: center;
}

h1.landing-h1 {
  font-family: 'Unica One', cursive;
  font-weight: 600;
  color: white;
  font-size: 100px;
  line-height: 100px;
  margin: 10px;
}

h3.landing-h3 {
  margin: 10px;
  line-height: 50px;
  font-family: 'Unica One', cursive;
  font-weight: 400;
  color: white;
  font-size: 35px;
}

.red {
/*  color: red;*/
/*  color: #a51212;*/
  color: #ca1a1a;
}

.tagline-container {
  /* border: 1px solid blue; */
  width:92%;
  height: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  text-align: center;
}

.container-content {
  /* border: 1px solid purple; */
  height: 50%;
  width: 60%;
  text-align:center;
  overflow-wrap: inherit;
}

.hero-button {  
  cursor: pointer;
  border: 1px solid white;
  border-radius: 5px;
  color: white;
  height: 45px;
  width: 140px;
/*  font-family: 'Open Sans', sans-serif;*/
  font-family: 'Unica One', cursive;
  font-size: 18px;
  display: inline-block;
  background: rgba(0,0,0,0.0);
  margin: 5px;
/*  text-transform: lowercase;*/
  letter-spacing: 1px;
}

.hero-button:hover {  
  border: 1px solid white;
  border-radius: 5px;
  color: black;
  height: 45px;
  width: 140px;
/*  font-family: 'Open Sans', sans-serif;*/
  font-family: 'Unica One', cursive;
  font-size: 18px;
  display: inline-block;
  background: white;
  margin: 5px;
/*  text-transform: lowercase;*/
  letter-spacing: 1px;
}


.skills-container {
  /* border: 1px solid red; */
  width:8%;
  height: 50%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  text-align: center;
  
}

.item-container{
/*  border: 1px solid blue;*/
  margin: 20px;
}

.item-text {
  text-align: center;
  color: white;
  font-family: 'Unica One', cursive;
}

.svg-circle {
  display: block; 
  margin: auto;
  transition: all .2s ease-in-out;
  cursor: pointer;
}

#tech {
  text-align: center;
  z-index: 5;
}

.tech-item {
  position: relative;
/*  border: 1px solid white;*/
  display: inline-block;
  width: 40px;
  margin: 4px;
  height: 40px;
  min-height: 63px;
  text-align: center;
  vertical-align: bottom;
  
}

.tech-icon {
  width: 40px;
  vertical-align: middle;
  text-align: center;
  animation-name: pulse_animation;
  animation-duration: 4s;
  transform-origin:center;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}

.tech-icon-text {
  position: absolute;
  display: inline-block;
  text-align: center;
  bottom: 0;
  font-family: 'Unica One', cursive;
  color: white;
  font-size: 10px;

}


@keyframes pulse_animation {
    0% { transform: scale(1); }
    5% { transform: scale(1.01); }
    10% { transform: scale(1.02); }
    15% { transform: scale(1.03); }
    20% { transform: scale(1.04); }
    25% { transform: scale(1.05); }
    30% { transform: scale(1.06); }
    35% { transform: scale(1.07); }
    40% { transform: scale(1.08); }
    45% { transform: scale(1.09); } 
    50% { transform: scale(1.1); }
    55% { transform: scale(1.09); }
    60% { transform: scale(1.08); }
    65% { transform: scale(1.07); }
    70% { transform: scale(1.06); }
    75% { transform: scale(1.05); }
    80% { transform: scale(1.04); }
    85% { transform: scale(1.03); }
    90% { transform: scale(1.02); }
    95% { transform: scale(1.01); }
    100% { transform: scale(1); }
}



.svg-circle:hover { 
  transform: scale(1.2); 
}

.not-visible {
  display: none;
}

.tech-visible {
  float: right;
  padding-bottom:15px;
  width: 400px;
  background-color: rgba(0, 0, 0, 0.7);
  display: inline-block;
  vertical-align:middle;
  border-radius: 5px;
  position: absolute;
  right: 100px;
  top: 25%;
}

.heading {
  color: white;
  font-family: 'Unica One', cursive;
/*  letter-spacing: 1px;*/
}


#services {
  text-align: center;
  z-index: 5;
}


.services-visible {
  float: right;
  padding-bottom:15px;
  width: 400px;
  background-color: rgba(0, 0, 0, 0.7);
  display: inline-block;
  vertical-align:middle;
  border-radius: 5px;
  position: absolute;
  right: 100px;
  top: 44%;
}

.services-text-1 {
  width: 10px;
  margin: 1px;
  display: inline-block;
  vertical-align: middle;
  color: red;
  font-family: 'Unica One', cursive;
}


.services-text-2 {
  width: 20px;
  margin: 4px;
  display: inline-block;
  vertical-align: middle;
  color: white;
  font-family: 'Unica One', cursive;
}

.red {
  color: red;
}



#about {
  text-align: center;
  z-index: 5;
}


.about-text-1 {
  width: 35px;
  margin: 4px;
  display: inline-block;
  vertical-align: middle;
  color: white;
  font-family: 'Unica One', cursive;
}

.about-text-2 {
  width: 20px;
  margin: 4px;
  display: inline-block;
  vertical-align: middle;
  color: red;
  font-family: 'Unica One', cursive;
}



.about-visible {
  float: right;
  padding-bottom:15px;
  width: 400px;
  background-color: rgba(0, 0, 0, 0.7);
  display: inline-block;
  vertical-align:middle;
  border-radius: 5px;
  position: absolute;
  right: 100px;
  top: 60%;
}

.getInTouchInput {
  display: block;
  margin:10px;
}

